force-app/main/default/objects/Inventory__c/fields/Available_Items_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Items_Quantity__c</fullName>
    <label>Available Items Quantity</label>
    <summaryFilterItems>
        <field>Inventory_Items__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory_Items__c.Inventory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>