force-app/main/default/objects/Inventory__c/fields/Console__c.field-meta.xml
<CustomField>
    <fullName>Console__c</fullName>
    <label>Console</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PS5</fullName>
            </value>
            <value>
                <fullName>Xbox</fullName>
            </value>
            <value>
                <fullName>Nintendo Wii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>