force-app/main/default/objects/Inventory__c/fields/copy_numbers__c.field-meta.xml
<CustomField>
    <fullName>copy_numbers__c</fullName>
    <description>Total de cópias disponíveis</description>
    <label>copy numbers</label>
    <summaryForeignKey>Inventory_Items__c.Inventory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>