force-app/main/default/objects/Inventory__c/fields/director__c.field-meta.xml
<CustomField>
    <fullName>director__c</fullName>
    <label>director</label>
    <length>250</length>
    <type>Text</type>
</CustomField>