force-app/main/default/objects/Inventory__c/fields/Display_Image__c.field-meta.xml
<CustomField>
    <fullName>Display_Image__c</fullName>
    <description>Logo da loja</description>
    <formula>HYPERLINK(&quot;https://drive.google.com/file/d/1XMiWfSCLkg8WbF4YeeesRR14mvrZJQlW/view?usp=sharing&quot;, &quot;logo da loja&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Image</label>
    <type>Text</type>
</CustomField>