force-app/main/default/objects/Inventory__c/fields/duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <label>duration</label>
    <length>250</length>
    <type>Text</type>
</CustomField>