force-app/main/default/objects/Inventory__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>URL para imagem do filme</description>
    <inlineHelpText>Coloque o link para imagem do filme</inlineHelpText>
    <label>Image URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>