force-app/main/default/objects/Inventory__c/fields/inventory_status__c.field-meta.xml
<CustomField>
    <fullName>inventory_status__c</fullName>
    <formula>IF(Available_Items_Quantity__c &gt; 0, &quot;Available&quot;, &quot;Unavailable&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>inventory status</label>
    <type>Text</type>
</CustomField>