force-app/main/default/objects/Inventory__c/fields/price_location__c.field-meta.xml
<CustomField>
    <fullName>price_location__c</fullName>
    <label>price location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>