force-app/main/default/objects/Inventory__c/fields/Synopse__c.field-meta.xml
<CustomField>
    <fullName>Synopse__c</fullName>
    <description>Breve descrição do filme</description>
    <inlineHelpText>Campo para descrever o filme</inlineHelpText>
    <label>Synopse</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>