force-app/main/default/objects/Inventory__c/fields/year_lauch__c.field-meta.xml
<CustomField>
    <fullName>year_lauch__c</fullName>
    <label>year launch</label>
    <type>Date</type>
</CustomField>