force-app/main/default/objects/Inventory__c/recordTypes/Game.recordType-meta.xml
<RecordType>
    <fullName>Game</fullName>
    <active>true</active>
    <label>Game</label>
</RecordType>